Support variable length bytes

--- a/src/embgen/domains/commands/templates/template.py.j2
+++ b/src/embgen/domains/commands/templates/template.py.j2
@@ -9,7 +9,7 @@ from dataclasses import dataclass
 from enum import Enum as BaseEnum
 from typing import ClassVar
 
-from commands_base import Command
+from .commands_base import Command
 
 {% for command in commands %}
 
